--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,12 @@
 Changelog
----------
+=========
+
+1.0b1 (unreleased)
+------------------
+
+* Drop support for Python 2.6, 2.7, 3.3, and 3.4.
+
+* Add support for Python 3.7, 3.8, 3.9, 3.10, and 3.11.
 
 0.6.1 (2022-01-14)
 ------------------
