--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,12 +4,15 @@ Changelog
 1.0b1 (unreleased)
 ------------------
 
+* Fix serialization of a tree to bytes
+  `PR <https://github.com/repoze/repoze.xmliter/pull/18/>`_.
+  [maurits]
 
 * Removed unused ``future`` dependency.
   Fixes `issue 10 <https://github.com/repoze/repoze.xmliter/issues/10>`_.
   [maurits]
 
-* Drop support for Python 2.6, 2.7, 3.3, and 3.4.
+* Drop support for Python 2.6, 2.7, 3.3, 3.4, 3.5, and 3.6.
   [tseaver, mborch]
 
 * Add support for Python 3.7, 3.8, 3.9, 3.10, and 3.11.
