--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,8 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
-* TBD
+* Test on Python 3.7-3.14.
+  [maurits]
 
 1.0b1 (2024-01-31)
 ------------------
