Drop support for Python 3.7.
It is almost two years out of support and cannot easily be tested.
See [this GHA job](https://github.com/repoze/repoze.xmliter/actions/runs/18881148541/job/53884318237?pr=19#step:3:14):

```
  Error: The version '3.7' with architecture 'x64' was not found for Ubuntu 24.04.
```

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,12 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
-* Test on Python 3.7-3.14.
+* Test on Python 3.8-3.14.
   [maurits]
+
+* Drop support for Python 3.7: it is almost two years out of support and cannot easily be tested.
+  [maurits]
+
 
 1.0b1 (2024-01-31)
 ------------------
