--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-1.0b2 (unreleased)
-------------------
+1.0 (2025-10-29)
+----------------
 
-* Test on Python 3.8-3.14.
+* Add support for Python 3.8 - 3.14.
   [maurits]
 
 * Drop support for Python 3.7: it is almost two years out of support and cannot easily be tested.
