--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+2.0 (unreleased)
+----------------
+
+* Replace ``pkg_resources`` namespace with PEP 420 native namespace.
+  [maurits]
+
+
 1.0 (2025-10-29)
 ----------------
 
